Fixed portfolio, news tabs gap

--- a/src/assets/sass/sections/portfolio-posts.scss
+++ b/src/assets/sass/sections/portfolio-posts.scss
@@ -5,6 +5,8 @@
 
     &__tabs {
         margin-top: 40px;
+        display: flex;
+        gap: 150px;
     }
 
     &__container {
